<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sepia"
    android:orientation="vertical"
    android:padding="@dimen/_20dp"
    tools:context=".fragment.AboutFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        android:contentDescription="@string/about_image"
        android:src="@drawable/about_photography" />

    <TextView
        android:id="@+id/tvAboutDescription"
        style="@style/SplashScreenTheme"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:justificationMode="inter_word"
        android:scrollbars="vertical"
        android:text="@string/this_is_golden_hour_photography"
        android:textColorLink="@color/golden" />

    <TextView
        android:id="@+id/tvAboutAuthor"
        style="@style/SplashScreenTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="end"
        android:text="@string/author" />


</LinearLayout>