<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?colorPrimary"
    app:cardCornerRadius="@dimen/_9dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="@dimen/_220dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_hint"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toStartOf="@+id/etLongitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="@dimen/_220dp"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_hint"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etLatitude"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGetSunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_sunrise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLatitude" />

        <TextView
            android:id="@+id/tvDate"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvTimeZone"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvSunrise"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvSunset"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvFirstLight"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvLastLight"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvDawn"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvDusk"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvGoldenHour"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
